--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ otp_release: 17.0
 
 before_install:
   - mkdir -p vendor/elixir
-  - wget -q https://github.com/elixir-lang/elixir/releases/download/v0.13.1/Precompiled.zip && unzip -qq Precompiled.zip -d vendor/elixir
+  - wget -q https://github.com/elixir-lang/elixir/releases/download/v0.13.3/Precompiled.zip && unzip -qq Precompiled.zip -d vendor/elixir
   - export PATH="$PATH:$PWD/vendor/elixir/bin"
   - export MIX_ENV=test
 
-install: mix deps.get
-script:  mix test
+install: MIX_ENV=test mix deps.get
+script:  MIX_ENV=test mix test
