--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language:    erlang
 otp_release: 17.0
 
+env:
+  - ELIXIR=v0.14.0
+  - ELIXIR=v0.14.1
+
 before_install:
   - mkdir -p vendor/elixir
-  - wget -q https://github.com/elixir-lang/elixir/releases/download/v0.14.0/Precompiled.zip && unzip -qq Precompiled.zip -d vendor/elixir
+  - wget -q "https://github.com/elixir-lang/elixir/releases/download/$ELIXIR/Precompiled.zip" && unzip -qq Precompiled.zip -d vendor/elixir
   - export PATH="$PATH:$PWD/vendor/elixir/bin"
   - export MIX_ENV=test
 
-install: MIX_ENV=test mix deps.get
-script:  MIX_ENV=test mix test
+install: mix deps.get
+script:  mix test
