--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   - ELIXIR=v0.14.1 MIX_ENV=test
   - ELIXIR=v0.14.2 MIX_ENV=test
   - ELIXIR=v0.14.3 MIX_ENV=test
+  - ELIXIR=v0.15.0 MIX_ENV=test
 
 before_install:
   - mkdir -p vendor/elixir
