--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,7 @@
-language:    erlang
-otp_release: 17.0
+language: elixir
 
 sudo: false
-env:  ELIXIR=v1.0.2 MIX_ENV=test
-
-before_install:
-  - mkdir -p vendor/elixir
-  - wget -q "https://github.com/elixir-lang/elixir/releases/download/$ELIXIR/Precompiled.zip" && unzip -qq Precompiled.zip -d vendor/elixir
-  - export PATH="$PATH:$PWD/vendor/elixir/bin"
-
-install:
-  - mix local.hex --force
-  - mix deps.get
-
-script: mix test
+env:  MIX_ENV=test
 
 after_success:
   - mix coveralls.travis
