--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: elixir
 
 sudo: false
-env:  MIX_ENV=test
+env:
+  - TEST_ENV=ex_unit
+  - TEST_ENV=verify
 
-after_success:
-  - mix coveralls.travis
+before_install: . ${TRAVIS_BUILD_DIR}/travis/${TEST_ENV}_before_install.sh
+install:        . ${TRAVIS_BUILD_DIR}/travis/${TEST_ENV}_install.sh
+script:         . ${TRAVIS_BUILD_DIR}/travis/${TEST_ENV}_script.sh
+after_success:  . ${TRAVIS_BUILD_DIR}/travis/${TEST_ENV}_after_success.sh
