matches referers depending on host and path

--- a/test/fixtures/referers.yml
+++ b/test/fixtures/referers.yml
@@ -1,4 +1,10 @@
 search:
+  Google Images:
+    parameters:
+      - q
+    domains:
+      - google.fr/imgres
+
   Google:
     parameters:
       - q
