--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,24 @@ sudo:     false
 
 jobs:
   include:
-    - stage:         test
-      elixir:        1.2.0
+    - &test
+      stage:         test
+      elixir:        1.2.6
       otp_release:   18.0
       env:           MIX_ENV=test
       after_success: mix coveralls.travis
+    - <<: *test
+      elixir:        1.3.4
+      after_success: true
+    - <<: *test
+      elixir:        1.4.4
+      after_success: true
+    - <<: *test
+      elixir:        1.4.4
+      otp_release:   19.0
+      after_success: true
     - stage:       verify
-      elixir:      1.2.0
+      elixir:      1.2.6
       otp_release: 18.0
       env:         MIX_ENV=prod
       script: |-
