--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ jobs:
       elixir:        1.4.5
       otp_release:   19.3
       after_success: true
+    - <<: *test
+      elixir:        1.4.5
+      otp_release:   20.0
+      after_success: true
     - stage:       verify
       elixir:      1.2.6
       otp_release: 18.3
