--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,14 @@ jobs:
       elixir:        1.4.5
       after_success: true
     - <<: *test
-      elixir:        1.4.5
+      elixir:        1.5.1
+      after_success: true
+    - <<: *test
+      elixir:        1.5.1
       otp_release:   19.3
       after_success: true
     - <<: *test
-      elixir:        1.4.5
+      elixir:        1.5.1
       otp_release:   20.0
       after_success: true
     - stage:       verify
