--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
     - stage:       verify
       elixir:      1.3.4
       otp_release: 18.3
-      env:         MIX_ENV=prod VERIFY_DELAY=1000
+      env:         MIX_ENV=prod
       script: |-
         cd "${TRAVIS_BUILD_DIR}/verify"
         mix compile
