--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,15 @@ jobs:
       elixir: 1.7.4
       otp_release: 21.0
       after_success: mix coveralls.travis
+
     - stage: verify
       elixir: 1.7.4
       otp_release: 21.0
       script: |-
         cd "${TRAVIS_BUILD_DIR}/verify"
         mix ref_inspector.verify
+
+    - stage: code quality
+      elixir: 1.7.4
+      otp_release: 21.0
+      script: mix format --check-formatted
