--- a/.travis.yml
+++ b/.travis.yml
@@ -6,24 +6,27 @@ jobs:
     - &test
       stage: test
       elixir: 1.5.3
-      otp_release: 19.3
+      otp_release: 18.3
     - <<: *test
       elixir: 1.6.6
-      otp_release: 20.3
+      otp_release: 19.3
     - <<: *test
       elixir: 1.7.4
+      otp_release: 20.3
+    - <<: *test
+      elixir: 1.8.0
       otp_release: 21.0
       after_success: mix coveralls.travis
 
     - stage: verify
-      elixir: 1.7.4
+      elixir: 1.8.0
       otp_release: 21.0
       script: |-
         cd "${TRAVIS_BUILD_DIR}/verify"
         mix ref_inspector.verify
 
     - stage: code quality
-      elixir: 1.7.4
+      elixir: 1.8.0
       otp_release: 21.0
       script:
         - mix format --check-formatted
