--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -1,6 +1,10 @@
 name: Verification
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: '15 16 * * *'
 
 jobs:
   check:
