--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: setup
       id: setup
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-elixir@v1
       with:
         elixir-version: '1.11.3'
         otp-version: '23.0'
