--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: setup
         id: setup
