--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -12,6 +12,9 @@ on:
     - cron: '15 16 * * *'
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   check:
     runs-on: ubuntu-24.04
