--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         id: setup
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: '1.18.4'
+          elixir-version: '1.19.0'
           otp-version: '28.1'
 
       - name: mix-cache
@@ -83,7 +83,7 @@ jobs:
         id: setup
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: '1.18.4'
+          elixir-version: '1.19.0'
           otp-version: '28.1'
 
       - name: mix-cache
@@ -123,8 +123,10 @@ jobs:
       matrix:
         include:
           - elixir: '1.17.3'
-            otp: '27.3'
+            otp: '26.2'
           - elixir: '1.18.4'
+            otp: '27.3'
+          - elixir: '1.19.0'
             otp: '28.1'
 
     steps:
